--- a/#src/index.html
+++ b/#src/index.html
@@ -5,9 +5,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="./img/favicon.ico" />
+	<title>Букмекерская контора Макслайн - Ставки на спорт онлайн</title>
+	<meta name="description"
+		content="Букмекерская контора ➀ МАКСЛАЙН ➨ Быстрый вывод средств без комиссии ☆ БОНУСЫ ➤ Хорошие коэффициенты ✓ Широкие линии и большие росписи ➤ Бесплатные прогнозы от профессионалов ➨ Точные результаты и статистика   ☆.">
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
-	<title>Букмекерская контора Макслайн</title>
 </head>
 
 <body>
