--- a/#src/_hero.html
+++ b/#src/_hero.html
@@ -2,10 +2,10 @@
   <div class="container">
     <header class="header">
       <div class="header__wrapper">
-        <a href="https://maxline.by/" class="header__logo">
+        <a href="https://maxline.by/" class="header__logo get-link">
           <img src="./img/logo.svg" alt="">
         </a>
-        <a href="https://m.maxline.by/" class="header__logo header__logo_md">
+        <a href="https://m.maxline.by/" class="header__logo header__logo_md get-link">
           <img src="./img/logo.svg" alt="">
         </a>
         <div class="header__socials socials">
@@ -81,9 +81,12 @@
         </div>
       </div>
       <div class="hero__info info-hero">
-        <a href="#" class="info-hero__btn btn btn_main">
+        <a href="https://maxline.by/user/signup" class="info-hero__btn btn btn_main get-link">
           <span>РЕГИСТРАЦИЯ</span>
         </a>
+        <!-- <a href="https://m.maxline.by/register" class="info-hero__btn info-hero__btn_md btn btn_main get-link">
+          <span>РЕГИСТРАЦИЯ</span>
+        </a> -->
         <div class="info-hero__terms">
           УСЛОВИЯ АКЦИИ
           <svg width="8" height="14" viewBox="0 0 8 14">
@@ -120,9 +123,15 @@
           </div>
           <ul class="modal-info__list modal-info__list_1">
             <li class="modal-info__list-item">
-              Зарегистрироваться на <a class="modal-info__list-link" href="#">promo.maxline.by/bonus100</a>,
-              верифицировать свой аккаунт с 01.10.2020
-              по 31.12.2020.
+              Зарегистрироваться на <a href="https://maxline.by/user/signup"
+                class="modal-info__list-link get-link">maxline.by</a>
+              <!-- <a href="https://m.maxline.by/"
+                class="modal-info__list-link modal-info__list-link_md get-link">maxline.by</a> -->
+              ,верифицировать свой аккаунт с 01.10.2020 по 31.12.2020.
+            </li>
+            <li class="modal-info__list-item">
+              При регистрации поставить галочку напротив пункта “Принимаю участие и согласен с условиями «бонуса на
+              первое пополнение»”.
             </li>
             <li class="modal-info__list-item">
               Впервые пополнить свой игровой счет <span>на сумму от 20 BYN.</span>
@@ -131,12 +140,14 @@
               Сделать ставки с коэффициентом <span>не менее 1,9</span> на сумму, превышающую (равную) пятикратный
               (пятикратному)
               размер (размеру) своего первого пополнения игрового счета в ставках типа “экспресс”, “система” или в
-              одиночной ставке.
+              одиночной ставке.</br>
               Например, если первое пополнение составило 20 BYN, то необходимо сделать ставки на сумму 100 BYN (и
               более).
             </li>
             <li class="modal-info__list-item">
-              Обратиться до 31.12.2020 на bonus@maxline.by с указанием номера игрового счета и пометкой <span>"Первое
+              Обратиться до 31.12.2020 на <a class="modal-info__list-mail"
+                href="mailto:bonus@maxline.by">bonus@maxline.by</a> с указанием
+              номера игрового счета и пометкой <span>"Первое
                 пополнение".</span>
             </li>
           </ul>
@@ -202,12 +213,12 @@
           <div class="modal-info__law">
             Букмекер оставляет за собой право приостановить действие бонуса.
           </div>
-          <a href="https://maxline.by/user/signup" class="modal-info__btn btn btn_modal">
+          <a href="https://maxline.by/user/signup" class="modal-info__btn btn btn_modal get-link">
             <span>Зарегистрироваться</span>
           </a>
-          <a href="https://m.maxline.by/register" class="modal-info__btn modal-info__btn_md btn btn_modal">
+          <!-- <a href="https://m.maxline.by/register" class="modal-info__btn modal-info__btn_md btn btn_modal get-link">
             <span>Зарегистрироваться</span>
-          </a>
+          </a> -->
         </div>
       </div>
     </div>
