--- a/#src/index.html
+++ b/#src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
@@ -10,9 +10,31 @@
 		content="Букмекерская контора ➀ МАКСЛАЙН ➨ Быстрый вывод средств без комиссии ☆ БОНУСЫ ➤ Хорошие коэффициенты ✓ Широкие линии и большие росписи ➤ Бесплатные прогнозы от профессионалов ➨ Точные результаты и статистика   ☆.">
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
+
+	<!-- Google Tag Manager -->
+	<script>(function (w, d, s, l, i) {
+			w[l] = w[l] || [];
+			w[l].push({
+				'gtm.start':
+					new Date().getTime(), event: 'gtm.js'
+			});
+			var f = d.getElementsByTagName(s)[0],
+				j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+			j.async = true;
+			j.src =
+				'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+			f.parentNode.insertBefore(j, f);
+		})(window, document, 'script', 'dataLayer', 'GTM-KPC273D');</script>
+	<!-- End Google Tag Manager -->
 </head>
 
 <body>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript>
+		<iframe src='https://www.googletagmanager.com/ns.html?id=GTM-KPC273D' height='0' width='0'
+			style='display:none;visibility:hidden'></iframe>
+	</noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<div class="wrapper">
 
 		<main class="page">
